🐛 Fixed footer overflow

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -17,7 +17,7 @@
     }
 
     .logo {
-        height: 100px;
+        height: inherit;
         width: 200px;
         box-sizing: border-box;
         position: relative;
